# vari

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  README_8md.html  annotated.html  annotated_dup.js  assert_8h_source.html  bits_2dispatch_8h.html  bits_2dispatch_8h.js  bits_2dispatch_8h_source.html  classes.html  classvari_1_1__uvptr-members.html  classvari_1_1__uvptr.html  classvari_1_1__uvptr.js  classvari_1_1__uvref-members.html  classvari_1_1__uvref.html  classvari_1_1__uvref.js  classvari_1_1__vptr-members.html  classvari_1_1__vptr.html  classvari_1_1__vptr.js  classvari_1_1__vref-members.html  classvari_1_1__vref.html  classvari_1_1__vref.js  classvari_1_1__vval-members.html  classvari_1_1__vval.html  classvari_1_1__vval.js  concept_8h_source.html  concepts.html  concepts.js  conceptvari_1_1__forward__nothrow__constructible.html  conceptvari_1_1forward__nothrow__constructible.html  conceptvari_1_1invocable.html  conceptvari_1_1invocable__for__one.html  (+362 more)
.github/workflows/: clang-tidy.yml  doxygen.yml  test.yml
include/vari/: concept.h  deleter.h  dispatch.h  forward.h  uvptr.h  uvref.h  vcast.h  vopt.h  vptr.h  vref.h  vval.h
include/vari/bits/: assert.h  dispatch.h  overloaded.h  ptr_core.h  typelist.h  util.h  val_core.h  val_union.h  val_union.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  (+42 more)
test/: CMakeLists.txt  allocator_test.cpp  common.h  dispatch_test.cpp  gdb_bin.cpp  gen_readme_cpp.py  test_types.h  typelist_test.cpp  vptr_test.cpp  vval_test.cpp
